Reverted Virtual Threads to Platform Threads (CONNECTORS-1784)